# radar_tech

./: README.md  genetic.ipynb  main.ipynb
notebooks/: config.json  examples_28.txt  genetic.ipynb  scipy.ipynb
src/: CMakeLists.txt  DataParserQuick.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Individuals.h  Population.cpp  Population.h  main.cpp
